--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Fiction'
 - !lcsh 'Short stories, Italian'
 - !lcc 'PQ'
+- GITenberg
 tableOfContents: Pasqua senz'Alleluja -- Il segreto di Dora -- Sanguedolce -- Rinnovamento
   -- Don Mignatta -- Al Santuario -- I soliloqui di Bicci -- L'inconsolabile -- L'ultima
   lusinga -- L'ideale -- Un sogno -- Arme ritorta -- La tragedia che -- L'amico Ramaglia
